[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py36']

[tool.pytest.ini_options]
addopts = "-vv --pep8 --cov=pyjob --cov-report=xml --pyargs pyjob"
pep8maxlinelength = "88"
pep8ignore = "E402"
arkers = "pep8: workaround for https://bitbucket.org/pytest-dev/pytest-pep8/issues/23/"
