[aliases]
test = pytest

[metadata]
name = pyjob
version = 0.4.3
description = Script Management Engine
author = Felix Simkovic
author_email = felixsimkovic@me.com
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_file = LICENSE.txt
url = https://github.com/fsimkovic/pyjob
project_urls = 
    Documentation = https://pyjob.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
py_modules = easy_install
packages = find:
setup_requires =
    chardet >=3.0.4
    pyyaml >= 3.13
    pytest-runner >=2.0,<3dev
tests_require =
    codecov
    coverage
    pytest
    pytest-cov
    pytest-pep8
    pytest-helpers-namespace

[options.entry_points]
console_scripts =
    pyjob = pyjob.__main__:main

